--- a/dokumentation/src/dokumentationsphase.tex
+++ b/dokumentation/src/dokumentationsphase.tex
@@ -7,7 +7,7 @@ der Sprache des Unternehmens, verfasst.
 
 \subsection{Nutzerdokumentation}
 Da der Funktionsumfang des Programms recht klein ist, wird auf ein handelsübliches
-Dokument verzichtet. Die Dokumentation findet ausschließlich über die Kommandozeile mit dem Aufruf des Programms unter Zusatz des Hilfe-Parameters (''help'' bzw. ''h'') statt.
+Dokument verzichtet. Die Dokumentation findet ausschließlich über die Kommandozeile mit dem Aufruf des Programms unter Zusatz des Hilfe-Parameters (\texttt{---help} bzw. \texttt{-h}) statt.
 Dieser Aufruf erzeugt eine kurze Beschreibung des Programms und dessen Parameter.
 
 \subsection{Entwicklerdokumentation}
