--- a/dokumentation/src/ProjektDoku_Winter2017.tex
+++ b/dokumentation/src/ProjektDoku_Winter2017.tex
@@ -121,7 +121,8 @@
 \include{anhang}
 
 
-\bibliography{bibliography}
+\bibliography{bibliography}{}
+\bibliographystyle{plain}
 %---------------------------------------------------------------------------
 \end{document}
 %---------------------------------------------------------------------------
