--- a/dokumentation/src/entwurfsphase.tex
+++ b/dokumentation/src/entwurfsphase.tex
@@ -106,8 +106,8 @@ Auch wurden für jeden selbst erstellten Datentyp und die dazugehörigen Funktio
 
 
 \subsection{Entwurf der Benutzeroberfläche}
-Der GNU Codingstandard\cite{gnuCodingStandard},
-sowie die POSIX Utility Guidelines\cite{posixGuidelines}
+Der GNU Codingstandard\footnote{\url{http://www-cs-faculty.stanford.edu/\~{}uno/abcde.html}},
+sowie die POSIX Utility Guidelines\footnote{\url{http://pubs.opengroup.org/onlinepubs/9699919799/basedefs/V1_chap12.html}}
 spezifizieren standardisierte Parameternamen und Funktionen eines Programms sowie
 deren erwartete Funktion. Da es sich bei der Zielgruppe um erfahrene Linuxnutzer handelt, wurde das Kommandozeilenprogramm nach diesen Standards entwickelt.\par
 
