--- a/dokumentation/src/analysephase.tex
+++ b/dokumentation/src/analysephase.tex
@@ -14,7 +14,7 @@ Somit besteht zur Zeit keine firmenweite Datenbank, welche die Symbole
 bereits verglichen und sortiert bereitstellt.\par
 
 Es besteht ein theoretischer Lösungsansatz auf Basis der 
-Damerau-Levenshtein-Distanz\footnote{Die Damerau-Levenshtein-Distanz\cite{dl_distance} 
+Damerau-Levenshtein-Distanz\footnote{Die Damerau-Levenshtein-Distanz
 beschreibt die minimale Anzahl an Operationen, welche benötigt werden, um einen 
 String A in einen zu vergleichenden String B zu verwandeln} (kurz: DLD). 
 Dieser sieht vor, eine $\text{M} \times \text{M}$ -Matrix zu generieren, wobei \textbf{M} sämtliche Symbole aller
