added soll ist table

--- a/dokumentation/src/bibliography.bib
+++ b/dokumentation/src/bibliography.bib
@@ -1,12 +1,18 @@
 
-@misc{gnuCodingStandard,
-    author    = "The GNU Foundation",
-    title     = "The GNU Coding Standard",
-    url       = "http://www-cs-faculty.stanford.edu/\~{}uno/abcde.html"
+@misc{ gnuCodingStandard,
+       author    = "The GNU Foundation",
+       title     = "The GNU Coding Standard",
+       url       = "http://www-cs-faculty.stanford.edu/\~{}uno/abcde.html"
 }
 
-@misc{posixGuidelines,
-   author = "The IEEE and The Open Group",
-   title = "The Open Group Base Specifications Issue 7: Chapter 12 - Utility Conventions",
-   url = "http://pubs.opengroup.org/onlinepubs/9699919799/basedefs/V1_chap12.html"
+@misc{ posixGuidelines,
+       author = "The IEEE and The Open Group",
+       title = "The Open Group Base Specifications Issue 7: Chapter 12 - Utility Conventions",
+       url = "http://pubs.opengroup.org/onlinepubs/9699919799/basedefs/V1_chap12.html"
+}
+
+@misc{ dl_distance,
+       author = "N/A",
+       title = "Damerau-Levenshtein Distance",
+       url = "https://en.wikipedia.org/wiki/Damerau%E2%80%93Levenshtein_distance"
 }
