--- a/dokumentation/src/postmortem.tex
+++ b/dokumentation/src/postmortem.tex
@@ -8,6 +8,27 @@ spielt die Entscheidung, die Einbindung des C-Codes in Python zu streichen, sich
 eine elementare Rolle. Wie man erkennen kann, wurden die freigewordenen Stunden effektiv
 ausgenutzt um den Anforderungen des Projekts gerecht zu werden. Die von der IHK vorgegebenen 70 Stunden wurden dabei konsequent eingehalten.
 
+
+\begin{table}[!htp]
+    \centering
+    \caption{Übersicht der benötigten Stunden}
+    \label{tabelle:sollist}
+    \begin{tabular}{llll}
+        \hline
+        \rowcolor[HTML]{9698ED}
+        {\color[HTML]{FFFFFF} \textbf{Phase}} & {\color[HTML]{FFFFFF} \textbf{Soll}} & {\color[HTML]{FFFFFF} \textbf{Ist}} & {\color[HTML]{FFFFFF} \textbf{Differenz}} \\ \hline
+        Analyse                               & 6h                                   & 7h                                  & +1h                                       \\
+        \rowcolor[HTML]{BBDAFF}
+        Entwurf                               & 22h                                  & 25h                                 & +3h                                       \\
+        Implementierung                       & 30h                                  & 27h                                 & -3h                                       \\
+        \rowcolor[HTML]{BBDAFF}
+        Abnahme                               & 3h                                   & 2h                                  & -1h                                       \\
+        Dokumentation                         & 9h                                   & 9h                                  & 0h                                        \\ \hline
+        \rowcolor[HTML]{9698ED}
+        {\color[HTML]{FFFFFF} \textbf{Summe}} & {\color[HTML]{FFFFFF} \textbf{70h}}  & {\color[HTML]{FFFFFF} \textbf{70h}} & {\color[HTML]{FFFFFF} \textbf{70h}}       \\ \hline
+    \end{tabular}
+\end{table}
+
 \subsection{Post Mortem}
 
 Vor allem während der Entwurfsphase konnte der Autor von seinen Kenntnissen aus dem Projektmanagement profitieren.
