--- a/dokumentation/src/projektplanung.tex
+++ b/dokumentation/src/projektplanung.tex
@@ -4,9 +4,26 @@
 Dem Autor standen 70 Arbeitsstunden zur Umsetzung des Projektes zur Verfügung.
 Vor Beginn des Projekts wurden diese auf die, für die Softwareentwicklung
 typischen, Phasen verteilt. Eine ausführlichere Aufteilung der Stunden kann der Tabelle
-"`Detaillierte Zeitplanung"' ( Abschnitt \ref{sec:tabellen}, Tabelle \ref{table:zeitplanung}) entnommen werden.
+"`Detaillierte Zeitplanung"' (Abschnitt \ref{sec:tabellen}, Tabelle \ref{table:zeitplanung}) entnommen werden. Einen groben Überblick bietet die untenstehende Tabelle.
 
-
+\begin{table}[!htp]
+    \centering
+    \caption{Grobe Zeitplanung}
+    \label{table:zeitplanungGrob}
+    \begin{tabular}{ll}
+        \rowcolor[HTML]{9698ED}
+        {\color[HTML]{FFFFFF} \textbf{Phase}} & {\color[HTML]{FFFFFF} \textbf{Dauer in Stunden}} \\ \hline
+        Analyse                               & 6                                                \\
+        \rowcolor[HTML]{BBDAFF}
+        Entwurf                               & 22                                               \\
+        Implementierung                       & 30                                               \\
+        \rowcolor[HTML]{BBDAFF}
+        Abnahme                               & 3                                                \\
+        Dokumentation                         & 9                                                \\ \hline
+        \rowcolor[HTML]{9698ED}
+        {\color[HTML]{FFFFFF} \textbf{Summe}} & {\color[HTML]{FFFFFF} \textbf{70}}
+    \end{tabular}
+\end{table}
 
 \subsection{Abweichungen vom Projektantrag}
 Ursprünglich wurde im Projektantrag eine Einbindung des Algorithmus in
