--- a/dokumentation/src/postmortem.tex
+++ b/dokumentation/src/postmortem.tex
@@ -6,7 +6,13 @@ abgesprochenen Funktionen und Anforderungen eingehalten worden sind
 und zur vollsten Zufriedenheit des Auftraggebers geliefert wurden. Hierbei
 spielt die Entscheidung, die Einbindung des C-Codes in Python zu streichen, sicherlich
 eine elementare Rolle. Wie man erkennen kann, wurden die freigewordenen Stunden effektiv
-ausgenutzt um den Anforderungen des Projekts gerecht zu werden. Die von der IHK vorgegebenen 70 Stunden wurden dabei konsequent eingehalten.
+genutzt um den Anforderungen des Projekts gerecht zu werden. Die Verzögerungen
+aus der Entwurfsphase, wurden später in der Implementierungsphase wieder aufgeholt.
+Die Abnahmephase gestaltete sich kürzer als gedacht, da der Code-Flight mit dem
+Abteilungsleiter zügiger von statten ging als geplant. Dies ist ein Resultat des
+Kanban-Prozesses -- dadurch, dass Arbeitspakete schon früh vom Auftraggeber
+gesichtet und abgenommen wurden, reichte hier eine grobe Übersicht des Endergebnisses
+aus. Die von der IHK vorgegebenen 70 Stunden wurden dabei konsequent eingehalten.
 
 
 \begin{table}[!htp]
