fixed logic in first sentence

--- a/dokumentation/src/intro.tex
+++ b/dokumentation/src/intro.tex
@@ -2,7 +2,7 @@
 \subsection{Projektumfeld}
 Die GA Financial Solutions GmbH ist ein fünfköpfiger Finanzdienstleister im
 Herzen Berlins, welcher sich auf computergestütztes Handeln
-von Futures, anderen Derivate und Aktien spezialisiert hat. Direkte Kunden gibt es zur Zeit
+von Futures, anderen Derivaten und Aktien spezialisiert hat. Direkte Kunden gibt es zur Zeit
 nicht und die Firma finanziert sich durch Investoren und den Gewinn ihrer
 Strategien. Die Rolle des Auftraggebers und Kunden übernimmt im Rahmen des
 Projektes Sebastian Freundt, stellvertretend für die Abteilung Datenverarbeitung.\par
