final commit- cant be fucked.

--- a/dokumentation/src/QGJoin_Diefenbach_Nils_FIAN1_Fachinformatiker_fuer_Anwendungsentwicklung_GA_Financial_Solutions_GmbH.tex
+++ b/dokumentation/src/QGJoin_Diefenbach_Nils_FIAN1_Fachinformatiker_fuer_Anwendungsentwicklung_GA_Financial_Solutions_GmbH.tex
@@ -68,7 +68,7 @@
 
 \begin{titlepage}
     \centering
-    {\scshape\LARGE Projektdokumentation\par}
+    {\scshape\LARGE Projektdokumentation QGJoin\par}
     \vspace{1cm}
     {\scshape\Large Ausbildung zum Fachinformatiker f. Anwendungsentwicklung\par}
     \vspace{1.5cm}
@@ -85,7 +85,7 @@
     {\large \today\par}
 \end{titlepage}
 \clearpage
-
+\pagenumbering{Roman}
 \tableofcontents{}
 \clearpage
 
@@ -94,12 +94,12 @@
 \listoffigures
 \listoftables
 \newpage
-\pagenumbering{arabic}
+
 
 \label{section:abbreviations}
 \include{abbreviations}
 \clearpage
-
+\pagenumbering{arabic}
 \label{section:einleitung}
 \include{intro}
 \clearpage
